Fix nav items spacing

--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -62,7 +62,7 @@
   .bm-item {
     display: inline-block;
 
-    margin: 1rem 0;
+    margin: .5rem 0;
   }
   
   /* Styling of overlay */
